CAY-2231 Support for collections in new functional expressions and old math expressions
CAY-2232 Proper conversion to String for new functional expressions
CAY-2235 Deprecate Query.getDataMap() method

Bug Fixes:

CAY-2032 SelectAction: DistinctResultIterator ignores flattened relationships
CAY-2137 When generating SQL from EJBQL, use "AND" to separate multiple join conditions
CAY-2174 Change FK attribute name cause ObjAttribute appear after Reverse Engineering
CAY-2175 AliasName used in EJBQLQuery is not working if it contains mixed case
CAY-2183 Newly created DbRelationship is unexpectedly renamed by the Modeler
CAY-2199 Modeler on Windows: The same project is displayed twice in "Recent Projects"
CAY-2207 Modeler: "Java Type" and "DbAttribute Path" are not saved with using TAB to move forward
CAY-2221 In-memory expression evaluation gives different result than select query
CAY-2236 Modeler Migrate DB Schema: unable to Reverse All Operations
CAY-2238 Modeler: Preserve manually set DbRelationship name when syncing with ObjEntity
CAY-2242 Vertical Inheritance: Cannot Insert Record For Implementing Class with Attribute And Relationship

----------------------------------
Release: 4.0.M4
Date: December 13, 2016
----------------------------------
Changes/New Features:

CAY-2051 Applying new Reverse Engineering to the Modeler
CAY-2053 SQLExec fluent query API
CAY-2060 Replace Query objects in DataMap with query descriptors
CAY-2062 MappedSelect and MappedExec fluent query API
CAY-2063 ProcedureCall fluent query API
CAY-2065 Pluggable serialization and connectivity layers for ROP
CAY-2073 Ordering.orderedList methods
CAY-2074 Support for catalogs in stored procedures
CAY-2076 Implement Jetty HTTP/1.1 and HTTP/2 Client support for ROP Client
CAY-2083 Implement Protostuff as serialization service for Cayenne ROP
CAY-2090 Untangle HttpRemoteService from ServiceContext thread local setup
CAY-2100 Add supporting generated keys for PostgreSQL